程式的部分搞定

--- a/hw4/hw4.ipynb
+++ b/hw4/hw4.ipynb
@@ -116,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7999999999999545\n"
+     ]
+    }
+   ],
    "source": [
     "x_i = [3,3,2,2,4,2,4,4,3,1]\n",
     "def dldu(u):\n",
@@ -127,37 +135,40 @@
     "\n",
     "def d2ldu2(u):\n",
     "    ans = -1\n",
-    "    return ans"
+    "    return ans\n",
+    "xk = 1000\n",
+    "xk -= dldu(1000)/d2ldu2(1000)\n",
+    "print()\n",
+    "print(xk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n"
+      "-997.2\n",
+      "4.529709940470639e-14\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
     "xk = 1000\n",
     "for k in range(10):\n",
-    "    xk +=  dldu(xk) / d2ldu2(xk)\n",
     "    print(dldu(xk))\n",
-    "    print(xk)"
+    "    xk -=  dldu(xk) / d2ldu2(xk)"
    ]
   }
  ],
