--- a/hw5/HW5_G9-2.ipynb
+++ b/hw5/HW5_G9-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "363013b1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "5947b87a",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "cef3bc13",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "e4ff6699",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "90d15015",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "3c394442",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "id": "af572b4c",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "id": "79771cdd",
    "metadata": {},
    "outputs": [],
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "id": "5d1999c8",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "array([0.01, 0.32, 0.33, 0.71, 0.88])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "id": "228eb02a",
    "metadata": {},
    "outputs": [],
@@ -1216,24 +1216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 43,
    "id": "5f481614",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mse_calculate(lst):\n",
     "    x = 0\n",
-    "    if len(lst) == 0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        for i in lst:\n",
-    "            x += (i - sum(lst)/len(lst))**2 / len(lst)\n",
-    "        return x"
+    "    for i in lst:\n",
+    "        x += (i - sum(lst)/len(lst))**2 / len(lst)\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 44,
    "id": "696aa9b8",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1285,7 @@
     "\n",
     "print('best split:',best_split)\n",
     "\n",
-    "# any number in [0.71, 0.88) is ok\n",
+    "# any number in (0.71, 0.88] is ok\n",
     "the_cut = 0.81\n",
     "X_L, X_R, Y_L, Y_R = get_XL(the_cut, df), get_XR(the_cut, df), get_YL(the_cut, df),get_YR(the_cut, df)\n",
     "for m in X_L:\n",
@@ -1320,7 +1317,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 45,
+   "id": "462d318c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.9500000000000002"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg = (-1.25-1.07-0.53)/3\n",
+    "avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e08a1e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MSE_list = [111]\n",
+    "gini = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "4e61bc7a",
    "metadata": {},
    "outputs": [
@@ -1353,20 +1383,13 @@
       "一階左右都有: ('LL :', [-1.25], 'LR:', [-1.07, -0.53, -2.32], 'RL :', [], 'RR:', [2.16])\n",
       "一階左右都有: ('LL :', [-1.25, -1.07], 'LR:', [-0.53, -2.32], 'RL :', [], 'RR:', [2.16])\n",
       "一階左右都有: ('LL :', [-1.25, -1.07, -0.53], 'LR:', [-2.32], 'RL :', [], 'RR:', [2.16])\n",
-      "(array([20]),)\n",
-      "25\n",
-      "best split: ('LL :', [-1.25, -1.07], 'LR:', [-0.53], 'RL :', [-2.32], 'RR:', [2.16])\n",
       "0.05616\n",
-      "best split: ('LL :', [-1.25, -1.07, -0.53], 'LR:', [-2.32], 'RL :', [], 'RR:', [2.16])\n"
+      "best split: ('LL :', [-1.25, -1.07], 'LR:', [-0.53], 'RL :', [-2.32], 'RR:', [2.16])\n"
      ]
     }
    ],
    "source": [
     "##depth = 2\n",
-    "MSE_list = []\n",
-    "result_list = []\n",
-    "min_MSE = 0\n",
-    "MSE = 0\n",
     "for j in cutpoint:\n",
     "    ##depth = 1\n",
     "    X_L, X_R, Y_L, Y_R = get_XL(j, df), get_XR(j, df), get_YL(j, df),get_YR(j, df)\n",
@@ -1382,7 +1405,8 @@
     "            MSE = (mse_left2*len(Y_RL) + mse_right2*len(Y_RR)) / 5\n",
     "            result = \"LL:\",[], \"LR:\",[],  'RL :',Y_RL ,'RR',Y_RR\n",
     "            print('一階左空:',result)\n",
-    "            result_list.append(result)\n",
+    "            if MSE < min(MSE_list):\n",
+    "                best_split = result\n",
     "            MSE_list.append(MSE)\n",
     "\n",
     "    elif len(X_L) >= 1 and len(X_R) >= 1:\n",
@@ -1407,13 +1431,9 @@
     "                    MSE = MSE_L + MSE_R\n",
     "                    result = 'LL :',Y_LL ,'LR:',Y_LR, 'RL :',Y_RL ,'RR:',Y_RR\n",
     "                    print('一階左右都有:',result)\n",
-    "                    result_list.append(result)\n",
+    "                    if MSE < min(MSE_list):\n",
+    "                        best_split = result\n",
     "                    MSE_list.append(MSE)\n",
-    "min_MSE=np.where(MSE_list==np.min(MSE_list))\n",
-    "print(min_MSE)\n",
-    "print(len(result_list))\n",
-    "for i in min_MSE[0]:\n",
-    "    print('best split:',result_list[i])\n",
     "print(MSE)\n",
     "print('best split:',best_split)"
    ]
@@ -1436,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "id": "54d68004",
    "metadata": {},
    "outputs": [],
@@ -1451,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "id": "d942d7fa",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 50,
    "id": "610cd5ac",
    "metadata": {},
    "outputs": [],
@@ -1476,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 52,
    "id": "4f1af9c8",
    "metadata": {},
    "outputs": [
@@ -1484,6 +1504,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "一階左空: ('LL:', [], 'LR:', [], 'RL :', [], 'RR', [0.0, 1.0, 1.0, 1.0, 0.0])\n",
+      "一階左空: ('LL:', [], 'LR:', [], 'RL :', [0.0], 'RR', [1.0, 1.0, 1.0, 0.0])\n",
+      "一階左空: ('LL:', [], 'LR:', [], 'RL :', [0.0, 1.0], 'RR', [1.0, 1.0, 0.0])\n",
+      "一階左空: ('LL:', [], 'LR:', [], 'RL :', [0.0, 1.0, 1.0], 'RR', [1.0, 0.0])\n",
+      "一階左空: ('LL:', [], 'LR:', [], 'RL :', [0.0, 1.0, 1.0, 1.0], 'RR', [0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0], 'RL :', [], 'RR:', [1.0, 1.0, 1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0], 'RR:', [1.0, 1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0, 1.0], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0, 1.0, 1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0], 'RL :', [], 'RR:', [1.0, 1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0], 'RL :', [1.0], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0], 'RL :', [1.0, 1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0], 'RL :', [], 'RR:', [1.0, 1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0], 'RL :', [1.0], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0], 'RL :', [1.0, 1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0, 1.0], 'RL :', [], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0, 1.0], 'RL :', [1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0, 1.0], 'RL :', [], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0, 1.0], 'RL :', [1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0, 1.0], 'LR:', [1.0], 'RL :', [], 'RR:', [1.0, 0.0])\n",
+      "一階左右都有: ('LL :', [0.0, 1.0], 'LR:', [1.0], 'RL :', [1.0], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [], 'LR:', [0.0, 1.0, 1.0, 1.0], 'RL :', [], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0], 'LR:', [1.0, 1.0, 1.0], 'RL :', [], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0, 1.0], 'LR:', [1.0, 1.0], 'RL :', [], 'RR:', [0.0])\n",
+      "一階左右都有: ('LL :', [0.0, 1.0, 1.0], 'LR:', [1.0], 'RL :', [], 'RR:', [0.0])\n",
       "8\n",
       "best split: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0, 1.0, 1.0], 'RR:', [0.0])\n",
       "14\n",
@@ -1510,12 +1555,14 @@
     "            giniRL, giniRR = 0,0\n",
     "            df_R = pd.DataFrame({'X':X_R, 'Y':Y_R})\n",
     "            X_RL, X_RR, Y_RL, Y_RR = get_XL(m, df_R), get_XR(m, df_R), get_YL(m, df_R), get_YR(m, df_R)\n",
-    "            giniRL = gini_calculate(Y_RL)\n",
-    "            giniRR = gini_calculate(Y_RR)\n",
+    "            if len(Y_RL)>0:\n",
+    "                giniRL = (Y_RL.count(1) * Y_RL.count(0)) /len(Y_RL) \n",
+    "            if len(Y_RR)>0:\n",
+    "                giniRR = (Y_RR.count(1) * Y_RR.count(0)) /len(Y_RR)\n",
     "            gini = giniRL + giniRR\n",
     "            result = \"LL:\",[], \"LR:\",[],  'RL :',Y_RL ,'RR',Y_RR\n",
     "            result_list.append(result)\n",
-    "            # print('一階左空:',result)\n",
+    "            print('一階左空:',result)\n",
     "            gini_list.append(gini)\n",
     "\n",
     "    elif len(X_L) >= 1 and len(X_R) >= 1:\n",
@@ -1530,14 +1577,18 @@
     "                    \n",
     "                    df_R = pd.DataFrame({'X':X_R, 'Y':Y_R})\n",
     "                    X_RL, X_RR, Y_RL, Y_RR = get_XL(n, df_R), get_XR(n, df_R), get_YL(n, df_R), get_YR(n, df_R)\n",
-    "                    giniRL = gini_calculate(Y_RL)\n",
-    "                    giniRR = gini_calculate(Y_RR)\n",
-    "                    giniLL = gini_calculate(Y_LL)\n",
-    "                    giniLR = gini_calculate(Y_LR)\n",
+    "                    if len(Y_RL)>0:\n",
+    "                        giniRL = (Y_RL.count(1) * Y_RL.count(0)) /len(Y_RL) \n",
+    "                    if len(Y_RR)>0:\n",
+    "                        giniRR = (Y_RR.count(1) * Y_RR.count(0)) /len(Y_RR)\n",
+    "                    if len(Y_LL)>0:\n",
+    "                        giniLL = (Y_LL.count(1) * Y_LL.count(0)) /len(Y_LL)\n",
+    "                    if len(Y_LR)>0:\n",
+    "                        giniLR = (Y_LR.count(1) * Y_LR.count(0)) /len(Y_LR)\n",
     "                    gini = giniLL + giniLR + giniRL + giniRR\n",
     "                    result = 'LL :',Y_LL ,'LR:',Y_LR, 'RL :',Y_RL ,'RR:',Y_RR\n",
     "                    result_list.append(result)\n",
-    "                    # print('一階左右都有:',result)\n",
+    "                    print('一階左右都有:',result)\n",
     "                    gini_list.append(gini)\n",
     "min_gini=np.where(gini_list==np.min(gini_list))\n",
     "for i in min_gini[0]:\n",
@@ -1547,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "id": "dadddf25",
    "metadata": {},
    "outputs": [
@@ -1555,41 +1606,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best split: ('left :', [0.0], 'right:', [1.0, 1.0, 1.0, 0.0])\n",
-      "best split: ('left :', [0.0, 1.0, 1.0, 1.0], 'right:', [0.0])\n"
+      "depth=0: ('root node:', array([0., 1., 1., 1., 0.]))\n",
+      "depth=1: ('left :', [], 'right:', [0.0, 1.0, 1.0, 1.0, 0.0])\n",
+      "depth=1: ('left :', [0.0], 'right:', [1.0, 1.0, 1.0, 0.0])\n",
+      "depth=1: ('left :', [0.0, 1.0], 'right:', [1.0, 1.0, 0.0])\n",
+      "depth=1: ('left :', [0.0, 1.0, 1.0], 'right:', [1.0, 0.0])\n",
+      "depth=1: ('left :', [0.0, 1.0, 1.0, 1.0], 'right:', [0.0])\n",
+      "best split: ('left :', [0.0], 'right:', [1.0, 1.0, 1.0, 0.0])\n"
      ]
     }
    ],
    "source": [
-    "# depth 0 or 1\n",
-    "result_list = []\n",
+    "##depth=0\n",
     "gini_list = []\n",
     "gini = 0\n",
     "\n",
+    "for k in range(len(df['Y'])):\n",
+    "    gini += (df.iloc[k,1] - (sum(df['Y'])/len(df['Y'])))**2\n",
+    "result = 'root node:',(df['Y'].values)\n",
+    "print('depth=0:',result)\n",
+    "gini_list.append(gini) ##weighted mean square error\n",
+    "best_split =result\n",
+    "\n",
+    "\n",
     "for j in cutpoint:\n",
     "    giniR, giniL = 0, 0\n",
+    "    ##depth = 1\n",
     "    X_L = get_XL(j, df)\n",
     "    X_R = get_XR(j, df)\n",
     "    Y_L = get_YL(j, df)\n",
     "    Y_R = get_YR(j, df)\n",
     "\n",
-    "    giniR = gini_calculate(Y_R)\n",
-    "    giniL = gini_calculate(Y_L)\n",
+    "    if len(Y_R)>0:\n",
+    "        giniR = (Y_R.count(1) * Y_R.count(0)) /len(Y_R) \n",
+    "    if len(Y_L)>0:\n",
+    "        giniL = (Y_L.count(1) * Y_L.count(0)) /len(Y_L)\n",
     "\n",
     "    gini = giniR + giniL\n",
     "\n",
     "    result = 'left :',Y_L ,'right:',Y_R\n",
-    "    # print('depth=1:',result)\n",
-    "    result_list.append(result)\n",
+    "    print('depth=1:',result)\n",
+    "    if gini < min(gini_list):\n",
+    "        best_split = result\n",
     "    gini_list.append(gini)\n",
-    "min_gini = np.where(gini_list==np.min(gini_list))\n",
-    "for i in min_gini[0]:\n",
-    "    print('best split:',result_list[i])"
+    "\n",
+    "print('best split:',best_split)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 54,
    "id": "42ebd816",
    "metadata": {},
    "outputs": [
@@ -1597,17 +1663,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best split: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0, 1.0, 1.0], 'RR:', [0.0])\n"
+      "best split: ('LL :', [], 'LR:', [0.0, 1.0], 'RL :', [], 'RR:', [1.0, 1.0, 0.0])\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# any number in [0.01, 0.33) is ok\n",
-    "# case1: the cut in [0.01, 0.1)\n",
+    "# any number in (0.01, 0.32] is ok\n",
     "the_cut = 0.09\n",
-    "result_list = []\n",
-    "gini_list = []\n",
     "X_L, X_R, Y_L, Y_R = get_XL(the_cut, df), get_XR(the_cut, df), get_YL(the_cut, df),get_YR(the_cut, df)\n",
     "for m in X_L:\n",
     "    for n in X_R:\n",
@@ -1620,24 +1683,27 @@
     "            df_R = pd.DataFrame({'X':X_R, 'Y':Y_R})\n",
     "            X_RL, X_RR, Y_RL, Y_RR = get_XL(n, df_R), get_XR(n, df_R), get_YL(n, df_R), get_YR(n, df_R)\n",
     "\n",
-    "            giniRL = gini_calculate(Y_RL)\n",
-    "            giniRR = gini_calculate(Y_RR)\n",
-    "            giniLL = gini_calculate(Y_LL)\n",
-    "            giniLR = gini_calculate(Y_LR)\n",
-    "            \n",
+    "            if len(Y_RL)>0:\n",
+    "                giniRL = (Y_RL.count(1) * Y_RL.count(0)) /len(Y_RL) \n",
+    "            if len(Y_RR)>0:\n",
+    "                giniRR = (Y_RR.count(1) * Y_RR.count(0)) /len(Y_RR)\n",
+    "            if len(Y_LL)>0:\n",
+    "                giniLL = (Y_LL.count(1) * Y_LL.count(0)) /len(Y_LL)\n",
+    "            if len(Y_LR)>0:\n",
+    "                giniLR = (Y_LR.count(1) * Y_LR.count(0)) /len(Y_LR)\n",
     "            gini = giniLL + giniLR + giniRL + giniRR\n",
     "            result = 'LL :',Y_LL ,'LR:',Y_LR, 'RL :',Y_RL ,'RR:',Y_RR\n",
     "            result_list.append(result)\n",
     "            # print('一階左右都有:',result)\n",
     "            gini_list.append(gini)\n",
-    "min_gini = np.where(gini_list==np.min(gini_list))\n",
+    "min_gini=np.where(gini_list==np.min(gini_list))\n",
     "for i in min_gini[0]:\n",
     "    print('best split:',result_list[i])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "id": "c4ff09aa",
    "metadata": {},
    "outputs": [
@@ -1645,13 +1711,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(array([2]),)\n",
+      "4\n",
       "best split: ('LL :', [], 'LR:', [0.0], 'RL :', [1.0, 1.0, 1.0], 'RR:', [0.0])\n"
      ]
     }
    ],
    "source": [
-    "# any number in [0.01, 0.33) is ok\n",
-    "# case2: the cut in [0.1, 0.33)\n",
     "the_cut = 0.18\n",
     "result_list = []\n",
     "gini_list = []\n",
@@ -1667,16 +1733,22 @@
     "            df_R = pd.DataFrame({'X':X_R, 'Y':Y_R})\n",
     "            X_RL, X_RR, Y_RL, Y_RR = get_XL(n, df_R), get_XR(n, df_R), get_YL(n, df_R), get_YR(n, df_R)\n",
     "\n",
-    "            giniRL = gini_calculate(Y_RL)\n",
-    "            giniRR = gini_calculate(Y_RR)\n",
-    "            giniLL = gini_calculate(Y_LL)\n",
-    "            giniLR = gini_calculate(Y_LR)\n",
+    "            if len(Y_RL)>0:\n",
+    "                giniRL = (Y_RL.count(1) * Y_RL.count(0)) /len(Y_RL) \n",
+    "            if len(Y_RR)>0:\n",
+    "                giniRR = (Y_RR.count(1) * Y_RR.count(0)) /len(Y_RR)\n",
+    "            if len(Y_LL)>0:\n",
+    "                giniLL = (Y_LL.count(1) * Y_LL.count(0)) /len(Y_LL)\n",
+    "            if len(Y_LR)>0:\n",
+    "                giniLR = (Y_LR.count(1) * Y_LR.count(0)) /len(Y_LR)\n",
     "            gini = giniLL + giniLR + giniRL + giniRR\n",
     "            result = 'LL :',Y_LL ,'LR:',Y_LR, 'RL :',Y_RL ,'RR:',Y_RR\n",
     "            result_list.append(result)\n",
     "            # print('一階左右都有:',result)\n",
     "            gini_list.append(gini)\n",
     "min_gini=np.where(gini_list==np.min(gini_list))\n",
+    "print(min_gini)\n",
+    "print(len(result_list))\n",
     "for i in min_gini[0]:\n",
     "    print('best split:',result_list[i])"
    ]
@@ -1698,7 +1770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (v3.10.6:9c7b4bd164, Aug  1 2022, 17:13:48) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
